<?xml version="1.0"?>
<package format="2">
  <name>anyangle_planners</name>
  <version>0.1.0</version>
  <description>Algorithms for Any-angle Pathfinding</description>

  <maintainer email="mlsdphonethk@gmail.com">Phone Thiha Kyaw</maintainer>

  <license>BSD</license>
  <author email="mlsdphonethk@gmail.com">Phone Thiha Kyaw</author>

  <buildtool_depend>catkin</buildtool_depend>

  <export></export>
</package>